implementa teste unitario para VendaController e refatora alguns testes